2005-02-19  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-ibm-dev.el (shimbun-get-headers): Fix index list reverse operation.

2005-02-18  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/nnshimbun.el (nnshimbun-decode-group-name): New function.
	(nnshimbun-request-article, nnshimbun-request-group)
	(nnshimbun-request-scan, nnshimbun-close-group)
	(nnshimbun-retrieve-headers, nnshimbun-request-expire-articles)
	(nnshimbun-request-delete-group): Decode group name.
	(gnus-group-make-shimbun-group): The server name must be
	unibyte string; Encode group name to utf-8.

2005-02-17  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-impress.el (shimbun-impress-groups-alist): Add new
	groups:"enterprise" "dc" "k-tai" "bb" "forest".
	(shimbun-impress-get-headers-date): Rename from shimbun-get-headers.
	(shimbun-impress-get-headers-sequence): New function.
	(shimbun-get-headers): Redefine method; function calling branched by
	groups.
	(shimbun-make-contents): Add date fix routine.

2005-02-17  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-yahoo-auctions.el: New file.

	* shimbun/shimbun.el (shimbun-url-encode-string): New function alias.
	(shimbun-group-p): New method.
	(shimbun-open-group): Use `shimbun-group-p'.

	* shimbun/nnshimbun.el (gnus-group-make-shimbun-group): Allow
	the group which is not contained in `shimbun-groups'.

2005-02-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-lnum.el: Rename from w3m-link-numbering.el.

	* mime-w3m.el: Load mime-parse.el before mime.el and w3m.el when
	compiling rather than always loading mime.el and w3m.el.

2005-02-16  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-form.el: Changes to define `w3m-form-input-textarea-mode' as
	a minor mode.
	(w3m-form-textarea-edit-mode): New option.
	(w3m-form-input-textarea-map): Renamed from
	`w3m-form-input-textarea-keymap'.
	(w3m-form-input-textarea-mode) [variable]: New internal variable.
	(w3m-form-input-textarea-mode) [function]: Reconstructed.