@@ -179,7 +179,9 @@ but you can identify it from the URL, define this method in a backend.")
 	    (let* ((date (or (shimbun-rss-get-date shimbun url)
 			     (shimbun-rss-node-text dc-ns 'date item)
 			     (shimbun-rss-node-text rss-ns 'pubDate item)))
-		   (id (shimbun-rss-build-message-id shimbun url date)))
+		   (id (shimbun-rss-build-message-id shimbun url date))
+		   (description
+		    (shimbun-rss-node-text rss-ns 'description item)))
 	      (unless (shimbun-search-id shimbun id)
 		(push (shimbun-create-header
 		       0
@@ -190,7 +192,9 @@ but you can identify it from the URL, define this method in a backend.")
 			   author
 			   (shimbun-from-address shimbun))
 		       (shimbun-rss-process-date shimbun date)
-		       id "" 0 0 url)
+		       id "" 0 0 url
+		       (when description
+			 (list (cons 'description description))))
 		      headers))))))
       headers)))
 
